--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ header p {
 .subscription button:focus {
   outline: none;
 }
-footer {
+main > footer {
   grid-area: footer;
   background-color: #4bbfbe;
   color: var(--neutral1LightGray);
@@ -102,6 +102,7 @@ footer p {
   padding-left: 3em;
   padding-right: 2em;
 }
+
 @media (max-width: 800px) {
   .main {
     width: 90%;
@@ -112,5 +113,22 @@ footer p {
       "subscription"
       "footer";
     grid-template-rows: 18em 16em 16em;
+  }
+  .container {
+    padding-left: 1em;
+    padding-right: 1em;
+  }
+}
+
+@media (max-width: 373px) {
+  .main {
+    width: 90%;
+    margin: 200px auto;
+    grid-template-columns: 1fr;
+    grid-template-areas:
+      "header"
+      "subscription"
+      "footer";
+    grid-template-rows: 20em 18em 18em;
   }
 }
